samples/_failures_safe/1761214632_dd192a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cfc2bf0c.c: In function ‘main’:
./samples/SAFE/__tmp_cfc2bf0c.c:139:9: error: expected declaration or statement at end of input
  139 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_cfc2bf0c.c:139:9: error: expected declaration or statement at end of input
